fixed slider, added animation, img wrap

--- a/front/src/blocks/g-slider/g-slider.scss
+++ b/front/src/blocks/g-slider/g-slider.scss
@@ -2,27 +2,56 @@
 {
 	position: relative;
 	width: 54.9vw;
+	height: 25.6vw;
 	overflow: hidden;
 	border-radius: 5px;
 
-	@include mq(376px, 768px) {width: 92vw;}
+	@include mq(376px, 768px)
+	 {
+	 	width: 92vw;
+	 	height: 45.6vw;
+	 }
 
-	@include mq(0, 375px) {width: 94.6vw;}
+	@include mq(0, 375px)
+	 {
+	 	width: 94.6vw;
+	 	height: 46.7vw;
+	 }
 }
 
 .g-slider__board
 {
 	display: flex;
 	width: fit-content;
+	height: inherit;
+	transition: transform .7s ease-in-out;
+}
 
-	& img
+.g-slider__imgWrap
+{
+	width: 54.9vw;
+	height: inherit;
+	background-color: #CCFF90;
+
+	@include mq(376px, 768px)
 	{
-		width: 54.9vw;
-
-		@include mq(376px, 768px) {	width: 92vw;}
-
-		@include mq(0, 375px) {width: 94.6vw;}
+		width: 92vw;
+		height: inherit;
 	}
+	@include mq(0, 375px)
+	 {
+	 	width: 94.6vw;
+	 	height: inherit;
+	 }
+}
+
+.g-slider__image
+{
+	width: 100%;
+	height: 100%;
+	// object-fit: fill;
+	object-fit: cover;
+	object-fit: contain;
 }
 
 .g-slider__button {
@@ -65,15 +94,15 @@
 
 .g-slider__detector {
 
-	height: 4px;
+	height: 3px;
 	width: 26px;
 	border-radius: 2px;
 	cursor: pointer;
-	background-color: $base-first;
+	background-color: rgba(255, 255, 255, .5);
 	transition: all .3s ease-in-out;
 
 	&:hover {
-		background-color: $accent-color;
+		// background-color: $accent-color;
 		transform: scale(1.2)
 	}
 }
